--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     <script src="https://cdn.jsdelivr.net/npm/three@0.160.0/build/three.min.js"></script>
 
     <!-- Game scripts -->
-    <script src="audio.js"></script>
-    <script src="game.js"></script>
+    <script src="audio.js?v=3"></script>
+    <script src="game.js?v=3"></script>
 </body>
 </html>
