--- a/index.html
+++ b/index.html
@@ -67,6 +67,72 @@
             pointer-events: none;
         }
 
+        #balloonCounter {
+            position: fixed;
+            top: 20px;
+            left: 20px;
+            background: rgba(255, 255, 255, 0.95);
+            padding: 15px 25px;
+            border-radius: 15px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+            font-size: 28px;
+            font-weight: bold;
+            color: #333;
+            z-index: 100;
+            font-family: 'Arial', sans-serif;
+        }
+
+        #celebration {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100vw;
+            height: 100vh;
+            background: rgba(255, 255, 255, 0.95);
+            display: none;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            z-index: 200;
+            animation: celebrationPulse 2s infinite;
+        }
+
+        #celebration.active {
+            display: flex;
+        }
+
+        #celebrationText {
+            text-align: center;
+        }
+
+        #celebrationName {
+            font-size: 80px;
+            font-weight: bold;
+            color: #ff1493;
+            margin-bottom: 20px;
+            animation: bounce 1s infinite;
+            text-shadow: 3px 3px 6px rgba(0,0,0,0.3);
+        }
+
+        #celebrationAge {
+            font-size: 200px;
+            font-weight: bold;
+            background: linear-gradient(45deg, #ff0000, #ff7f00, #ffff00, #00ff00, #0000ff, #4b0082, #9400d3);
+            background-size: 400% 400%;
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            background-clip: text;
+            animation: rainbow 3s ease infinite, spin 3s ease-in-out infinite;
+            text-shadow: 5px 5px 10px rgba(0,0,0,0.2);
+        }
+
+        #celebrationSubtext {
+            font-size: 40px;
+            color: #333;
+            margin-top: 20px;
+            font-weight: bold;
+        }
+
         @keyframes fadeOut {
             0%, 70% {
                 opacity: 1;
@@ -74,6 +140,54 @@
             100% {
                 opacity: 0;
                 display: none;
+            }
+        }
+
+        @keyframes bounce {
+            0%, 100% {
+                transform: translateY(0);
+            }
+            50% {
+                transform: translateY(-20px);
+            }
+        }
+
+        @keyframes spin {
+            0% {
+                transform: rotate(0deg) scale(1);
+            }
+            25% {
+                transform: rotate(5deg) scale(1.05);
+            }
+            50% {
+                transform: rotate(0deg) scale(1);
+            }
+            75% {
+                transform: rotate(-5deg) scale(1.05);
+            }
+            100% {
+                transform: rotate(0deg) scale(1);
+            }
+        }
+
+        @keyframes rainbow {
+            0% {
+                background-position: 0% 50%;
+            }
+            50% {
+                background-position: 100% 50%;
+            }
+            100% {
+                background-position: 0% 50%;
+            }
+        }
+
+        @keyframes celebrationPulse {
+            0%, 100% {
+                background: rgba(255, 240, 245, 0.98);
+            }
+            50% {
+                background: rgba(240, 248, 255, 0.98);
             }
         }
     </style>
@@ -87,16 +201,28 @@
         <button id="muteBtn" title="Mute/Unmute">🔊</button>
     </div>
 
+    <!-- Balloon Counter -->
+    <div id="balloonCounter">🎈 0/10</div>
+
     <!-- Instructions overlay (fades out) -->
     <div id="instructions">
         🎈 Press ANY key to pop balloons! 🎈
+    </div>
+
+    <!-- Birthday Celebration Overlay -->
+    <div id="celebration">
+        <div id="celebrationText">
+            <div id="celebrationName">TIMO</div>
+            <div id="celebrationAge">3</div>
+            <div id="celebrationSubtext">🎉 Press ESC to play again! 🎉</div>
+        </div>
     </div>
 
     <!-- Three.js from CDN -->
     <script src="https://cdn.jsdelivr.net/npm/three@0.160.0/build/three.min.js"></script>
 
     <!-- Game scripts -->
-    <script src="audio.js?v=3"></script>
-    <script src="game.js?v=3"></script>
+    <script src="audio.js?v=4"></script>
+    <script src="game.js?v=4"></script>
 </body>
 </html>
