--- a/index.html
+++ b/index.html
@@ -51,15 +51,15 @@
 
         #instructions {
             position: fixed;
-            top: 50%;
+            bottom: 30px;
             left: 50%;
-            transform: translate(-50%, -50%);
-            background: rgba(255, 255, 255, 0.95);
-            padding: 40px 60px;
-            border-radius: 20px;
-            box-shadow: 0 10px 40px rgba(0, 0, 0, 0.3);
+            transform: translateX(-50%);
+            background: rgba(255, 255, 255, 0.9);
+            padding: 15px 30px;
+            border-radius: 15px;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
             text-align: center;
-            font-size: 32px;
+            font-size: 20px;
             font-weight: bold;
             color: #333;
             z-index: 50;
@@ -302,7 +302,7 @@
     <script src="https://cdn.jsdelivr.net/npm/three@0.160.0/build/three.min.js"></script>
 
     <!-- Game scripts -->
-    <script src="audio.js?v=10"></script>
-    <script src="game.js?v=10"></script>
+    <script src="audio.js?v=11"></script>
+    <script src="game.js?v=11"></script>
 </body>
 </html>
