Enhance README and index.html with new features, audio attribution, and version updates

--- a/index.html
+++ b/index.html
@@ -4,6 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>🎈 Balloon Pop Party</title>
+
+    <!--
+    ============================================
+    AUDIO ATTRIBUTION
+    ============================================
+    Background music files (bg-video-game-music.mp3, happy-birthday.mp3)
+    are sourced from Pixabay (https://pixabay.com/)
+
+    Licensed under the Pixabay Content License:
+    - Free for commercial and non-commercial use
+    - No attribution required (but appreciated)
+    - Cannot be redistributed as standalone audio files
+
+    Learn more: https://pixabay.com/service/license-summary/
+    ============================================
+    -->
+
     <style>
         * {
             margin: 0;
@@ -302,7 +319,7 @@
     <script src="https://cdn.jsdelivr.net/npm/three@0.160.0/build/three.min.js"></script>
 
     <!-- Game scripts -->
-    <script src="audio.js?v=11"></script>
-    <script src="game.js?v=11"></script>
+    <script src="audio.js?v=12"></script>
+    <script src="game.js?v=12"></script>
 </body>
 </html>
