Rename project to "Little Archer Balloon Hunt" and update relevant references in README, index.html, and game.js; increment script version.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>🎈 Balloon Pop Party</title>
+    <title>🎈 Little Archer Balloon Hunt</title>
 
     <!--
     ============================================
@@ -319,7 +319,7 @@
     <script src="https://cdn.jsdelivr.net/npm/three@0.160.0/build/three.min.js"></script>
 
     <!-- Game scripts -->
-    <script src="audio.js?v=12"></script>
-    <script src="game.js?v=12"></script>
+    <script src="audio.js?v=13"></script>
+    <script src="game.js?v=13"></script>
 </body>
 </html>
