Add new power-up types and enhance arrow mechanics; update instructions for user interaction

--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
     <div id="countdown">3</div>
 
     <!-- Instructions overlay (fades out) -->
-    <div id="instructions">🎈 Press ANY key to pop balloons! 🎈</div>
+    <div id="instructions">🎈 Press ANY key or click/tap to pop balloons! 🎈</div>
 
     <!-- Birthday Celebration Overlay -->
     <div id="celebration">
